--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a target="_blank" href="https://equinessence.com/">More Info</a></li>
+											<li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe-vZ5fi6X79BHk-VqhcIgK8Jca4p6tjiZwiUzjpHsndJAzkA/viewform?usp=sf_link">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -37,7 +35,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Stable Current</h2>
-							<p>Micro current physical therapy for horses <br /></p>
+							<p>Electro Acuscope/Myopulse Therapy<br /></p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -46,15 +44,52 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Overview</h2>
+								<p style="text-align: left; color: white">
+									The Electro Acuscope/Myopulse Therapy system is an FDA approved non-invasive therapy
+									modality for animals and humans (depending on the calibration of the specific instrument). These instruments are
+									calibrated uniquely for animals per Animal Therapy Systems (ATS), which is the only company that
+									CALIBRATES instruments to the metabolic differences of animals.
+									<br /><br />
+									The instruments use microcurrent, a low voltage/low amperage current (equivalent to 1 millionth
+									of an amp) which matches that which naturally occurs in the body to help the body return to its
+									normal state following stress, injury, acute or chronic conditions, performance demands, and
+									pain management with an average 65% reduction in recovery time in clinical trials. The
+									Acuscope and Myopulse are the only FDA approved modality for horses on the market.
+									<br /><br />
+									The primary instrument is the Acuscope which
+									specifically addresses the nervous system to normalize the level of current in the nerve cells
+									and increases circulation and blood flow. It also helps locate areas of cellular dysfunction for
+									further investigation. It is unlike other modalities in that it has a biofeedback system which
+									internally adjusts the output according to the requirements of the tissue. A trained therapist will
+									adjust treatment frequencies, locations, times and methods based on this digital feedback to
+									target specific parts of the body that need focus.
+									<br /><br />
+									This biofeedback system consists of the BIOFEEDBACK LOOP that occurs every 5
+									milliseconds (2.5 milliseconds to gather info and 2.5 millisec to send /deliver appropriate level of
+									current to the tissue), the COMPUTER CIRCUITRY, where each instrument is pre programed
+									with cellular norms of the intended patient ...in this case, a horse, and an CONTINUOUSLY
+									VARIABLE WAVEFORM , significant because the wavelengths of delivery change per the
+									patient needs, completely eliminating the chance of overstimulation.
+									<br /><br />
+									The Myopulse is the companion instrument to the Acuscope, complementing the
+									Neuromuscular focus that we have already mentioned, with therapy focused on soft connective
+									tissue.(Muscles, ligaments, tendons, fascia and periosteum). Its goal is to normalize the
+									electromagnetic field around the affected soft tissue. It also increases blood flow, reducing
+									constriction in the blood vessels caused by trauma, chronic issues, and other injuries. When
+									the affected soft tissue is normalized, circulation can also normalize bringing a more relaxed,
+									healthy equilibrium.
+									<br /><br />
+									There are vast numbers of ways to effectively utilize this therapy , but generally one can fit plans
+									into one of four categories: Preventative maintenance, Performance optimization,General
+									Maintenance or Rehabilitation
+									<br />
+								</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fas fa-hat-cowboy major style1"><span class="label">Left cowboy hat</span></span></li>
+								<li><span class="icon fas fa-horse major style1"><span class="label">Horse icon</span></span></li>
+								<li><span class="icon fas fa-hat-cowboy major style1"><span class="label">Right cowboy hat</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -62,30 +97,56 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img style="max-height: 500px;" src="images/closeuplegs.jpg" alt="" /></div><div class="content">
+								<h2>Preventative maintenance<br /></h2>
+								<p>
+									Is for horses with no history of injury on chronic
+									conditions. These are often performance horses, young horses, or pleasure horses whose
+									owners want to optimize their health and minimize risk of injury. Starting all horses with 3
+									consecutive sessions in three days, we would ideally keep these horses on a 2 week schedule
+									(one treatment every 2 weeks following the initial three sessions).
+									Some horses in this category are performance horses whose owners want a preparation and
+									recovery program for specific events. Personalized schedules for these situations can also be
+									arranged.
+								</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img style="max-height: 500px;" src="images/stablehorse.jpg" alt="" /></div><div class="content">
+								<h2>Performance optimization<br /></h2>
+								<p>
+								</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img style="max-height: 500px;" src="images/brownhorse.jpg" alt="" /></div><div class="content">
+								<h2>General maintenance<br /></h2>
+								<p>
+									Is for those horses who have a history of injuries
+									or chronic conditions. The goal for these horses is to slow down the progression of the injury
+									/condition and provide non invasive pain management while keeping the body healthy as a
+									whole. Typically that would be in the form of 5-10 sessions. Continued maintenance is important, at
+									whatever level fits the situation and budget.
+								</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img style="max-height: 500px;" src="images/whitehorse.jpg" alt="" /></div><div class="content">
+								<h2>Rehabilitation<br /></h2>
+								<p>
+									Is for horses diagnosed with injuries or severe chronic
+									conditions. The goal is to accelerate the recovery process by 50% or more based on the
+									Prognosis time established by the vet.
+									Full rehabilitation is typically 30 days increments (based on veterinarian’s prognosis), 5 sessions
+									weekly. We have vets check them every 30-45 days to check progress and adjust treatment per
+									vet findings.
+								</p>
 							</div>
 						</section>
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
@@ -119,35 +180,38 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
+						<div class="inner" style="justify-content: center">
+							<!-- <header>
 								<h2>Arcue ut vel commodo</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
+							<br /> -->
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a style="background: #21b2a6; box-shadow: none;" target="_blank"  href="https://docs.google.com/forms/d/e/1FAIpQLSe-vZ5fi6X79BHk-VqhcIgK8Jca4p6tjiZwiUzjpHsndJAzkA/viewform?usp=sf_link" class="button fit">Contact</a></li>
 							</ul>
+							<!-- <iframe style="background-color: white;" src="https://docs.google.com/forms/d/e/1FAIpQLSe-vZ5fi6X79BHk-VqhcIgK8Jca4p6tjiZwiUzjpHsndJAzkA/viewform?embedded=true" width="100%" height="818" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
 						</div>
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-
+					<div id="footer-start">
+						<footer id="footer">
+							<!-- <ul class="icons">
+								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							</ul> -->
+							<ul class="copyright">
+								<li>Copyright &copy; Stable Current - All Rights Reserved</li>
+							</ul>
+						</footer>
+					</div>
 			</div>
 
 		<!-- Scripts -->
